Load u and D from input file if specified
The input file is a .npz file with keys 'd' and 'u'

--- a/test_rk1pert.ipynb
+++ b/test_rk1pert.ipynb
@@ -19,9 +19,18 @@
     "tmax = 20\n",
     "tstep = .01\n",
     "plot_asymptotes = True\n",
+    "inputfile = None # This supercedes other parameters\n",
     "\n",
     "D = rand_diag(n, dmin, dmax)\n",
     "u = rand_unit_vector(n)\n",
+    "\n",
+    "# If input file is specified, load D and u from there instead\n",
+    "if inputfile is not None:\n",
+    "    inputfile = np.load(inputfile)\n",
+    "    D = np.diag(inputfile['d'])\n",
+    "    u = inputfile['u']\n",
+    "    n = len(u)\n",
+    "    \n",
     "U = np.outer(u, u)\n",
     "print(\"u = \" + str(u))\n",
     "print(\"D = \" + str(np.diag(D)))\n",
