Allow user to input D and u directly
Also include documentation for specifying input.  The order of precedence
for input types is
1.  Input file
2.  Directly specifying D and u
3.  Parameters for randomized input

I.e., if both an input file and D and u are specified, then D and u will be
loaded from the input file.

--- a/test_rk1pert.ipynb
+++ b/test_rk1pert.ipynb
@@ -1,9 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot eigenvalues of Hermitian pencils\n",
+    "\n",
+    "The script below plots eigenvalues of a Hermition pencil $A(t) = D + t\\mathbf u\\mathbf u^\\top$.\n",
+    "\n",
+    "Input can be specified in one of three ways:\n",
+    "1.  By specifying an input .npz file containing keys `d` and `u`, where `d` contains a 1d array of the diagonal entries.\n",
+    "2.  By specifying $D$ and $\\mathbf u$ directly.\n",
+    "3.  By specifying parameters for randomized input.\n",
+    "\n",
+    "The order of precedence of these input methods goes from 1 to 3; e.g., if the user specifies both and input file and $D$ and $\\mathbf u$, then $D$ and $\\mathbf u$ will be loaded from the input file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -12,6 +29,11 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "inputfile = None # This supercedes other parameters\n",
+    "\n",
+    "D = None\n",
+    "u = None\n",
+    "\n",
     "n = 5\n",
     "dmin = 0\n",
     "dmax = 20\n",
@@ -19,17 +41,19 @@
     "tmax = 20\n",
     "tstep = .01\n",
     "plot_asymptotes = True\n",
-    "inputfile = None # This supercedes other parameters\n",
-    "\n",
-    "D = rand_diag(n, dmin, dmax)\n",
-    "u = rand_unit_vector(n)\n",
     "\n",
     "# If input file is specified, load D and u from there instead\n",
     "if inputfile is not None:\n",
     "    inputfile = np.load(inputfile)\n",
     "    D = np.diag(inputfile['d'])\n",
     "    u = inputfile['u']\n",
-    "    n = len(u)\n",
+    "    \n",
+    "if D is None:\n",
+    "    D = rand_diag(n, dmin, dmax)\n",
+    "if u is None:\n",
+    "    u = rand_unit_vector(n)\n",
+    "    \n",
+    "n = len(u)\n",
     "    \n",
     "U = np.outer(u, u)\n",
     "print(\"u = \" + str(u))\n",
